# csa-lab3

./: README.md  alu.py  config.py  control_unit.py  data_path.py  file_wrapper.py  generator.py  golden.py  golden_test.py  lexer.py  log  opcode.py  opcodes.py  pyproject.toml  signals.py  stack.py  test.txt  testlog.txt  testout.txt  utils.py  vm.py
.github/workflows/: pylint.yml
temp/: cat_input  cat_out  prob1  prob1_out  test_out
tests/: cat.yml  hello_world.yml  prob1.yml
